chapter 6: Make a basic User model (including secure passwords)

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@
 /config/master.key
 .idea
 <?xml version="1.0" encoding="UTF-8"?>
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
