--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ config/settings/*.local.yml
 config/environments/*.local.yml
 
 # Ignore application configuration
-/config/application.yml
+config/application.yml
